# clib

./: .Deprecated.c  CMakeLists.txt  clib.c  clib.h  clib_chown.ll  clib_close.ll  clib_exit.ll  clib_open.ll  clib_perror.ll  compile.sh  def.h  install.sh  stdio.h  struct_FILE.h
.cache/clangd/index/: clib.c.7D39E5982D9A50D5.idx  clib.c.943B580E845F16AA.idx  clib.c.CFF9CCA1768036C5.idx  clib.h.33634D12C0BA961B.idx  clib.h.7ECA661168FBA9CB.idx  clib.h.C0C72A12BD24A2E0.idx  def.h.AC1800AED89791C5.idx  def.h.C89B5AA0BA93C75D.idx  io.c.10C7EB1000853EE7.idx  library.c.F3503E0EBAACE2DC.idx  library.h.C9B5871E61621EED.idx  malloc.h.264DA2F090205C9F.idx  std_str.h.51002DB245421D2F.idx  stdio.h.CC92C3001D315354.idx  strlen.c.8AAE4F8E45B930B4.idx  struct_FILE.h.025273EF3EA34B1C.idx
src/: add.asm  asm.asm  asm_append_str.asm  asm_launch_binary.asm  clib.c  clib.h  clib_strcpy.asm  clib_strlen.asm  get_status_and_val.asm  lib.asm  str_copy.asm
src/__asm__/: __asm__.c  __asm__.h  compile__asm__.sh  struct.s
src/__asm__/src/: strcpy.s  struct.s
src/asm/: __asm__.h  compile__asm__.sh
src/asm/include/: io.h  memcpy.h  strcpy.h  strlen.h
src/asm/src/: io.c  io.s  memcpy.c  memcpy.s  strcpy.c  strlen.c  strlen.s
